fixing updateWithExeption, i forgot to call courseRepository.save()